regression_tests/snap/check/teststm2/teststm2.err
================================================================================

                      PROGRAM SNAP  Version 2.7.10-bf63ac3

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 13 2018 13:11:29

================================================================================
                     Run at 13-AUG-2018 13:42:14 by ccrook




================================================================================
                                                            13-AUG-2018 13:42:14

                                 ERROR SUMMARY

================================================================================

Error: Cannot use add_coordinate_file before coordinate_file is loaded
       Line 2: File teststm2.snp

Error: The command file is not correct
