regression_tests/snap/check/teststm2/teststm2.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.10-bf63ac3

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 13 2018 13:11:29

================================================================================
                     Run at 13-AUG-2018 13:42:14 by ccrook




================================================================================
Regression tests - multiple coordinate files                13-AUG-2018 13:42:14

                                     ERRORS

================================================================================

Note: 2 errors reported in teststm2.err
